# C-CodeGen-NN

./: .gitignore  README.md  generate.sh  prepare.sh  pyproject.toml
model_files/onnx/mnist/: outp.npy
output/cnn_mnist/generated_metadata/: metadata.json
output/cnn_mnist/include/: input.h  malloc_wrapper.h  output.h  tvmgen_default.h
output/cnn_mnist/src/: default_lib1.c  main.c
runnables/: gen_headers.py  gen_rndn_verification_data.py  generate_mlf_from_onnx.py  process_genlibc.py
template_files/: main.c  malloc_wrapper.h
